<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"


    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailSuperHeroActivity">


    <ImageView
        android:id="@+id/ivSuperHeroDetails"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:contentDescription="@string/image_view"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView

        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="235dp"
        android:layout_marginBottom="-20dp"
        android:backgroundTint="@color/BackgroundDetail"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView

                android:id="@+id/tvSName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="20dp"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:textStyle="bold"
                tools:text="SuperHeroName" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="40dp"
                android:gravity="bottom"
                android:orientation="horizontal">

                <View
                    android:id="@+id/ViewIntelligence"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:background="@color/intelligence" />

                <View
                    android:id="@+id/ViewStrength"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:background="@color/strength" />

                <View
                    android:id="@+id/ViewSpeed"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:background="@color/speed" />

                <View
                    android:id="@+id/ViewDurability"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:background="@color/durability" />

                <View
                    android:id="@+id/ViewPower"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:background="@color/power" />

                <View
                    android:id="@+id/ViewCombat"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:background="@color/combat" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/Intelligence"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/Strength"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/Speed"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/Durability"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/Power"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/Combat"
                    android:textColor="@color/white"
                    android:textSize="15sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_marginHorizontal="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Biography"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold"
                   android:layout_marginBottom="20dp"/>

                <TextView
                    android:textColor="@color/TextColor"
                    android:text="@string/FullName"
                    android:textSize="15sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tvFullName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/Biography"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="5dp"/>
                <TextView
                    android:textColor="@color/TextColor"
                    android:textSize="15sp"
                    android:text="@string/Alter_Ego"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tvAlterEgo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/Biography"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="5dp"
                    />
                <TextView
                    android:textColor="@color/TextColor"
                    android:textSize="15sp"
                    android:text="@string/Alias"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tvAliases"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/Biography"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="5dp"/>


            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>